[WinCairo] Video position is incorrect when located inside a frame. https://bugs.webkit.org/show_bug.cgi?id=142784

Reviewed by Brent Fulgham.

We need to take the enclosing frame's position into account, when finding the video position.

* platform/graphics/win/MediaPlayerPrivateMediaFoundation.cpp:
(WebCore::MediaPlayerPrivateMediaFoundation::setSize):


Canonical link: https://commits.webkit.org/160820@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@181665 268f45cc-cd09-0410-ab3c-d52691b4dbfc